# pptk

./: .gitignore  CMakeLists.txt  setup.py
cmake/: FindEigen.cmake  FindNumpy.cmake  FindTBB.cmake
